--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio Website</title>
+    <title>Jeet's Portfolio</title>
+    <!-- favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
     <!-- Link To CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="css/style.css">
@@ -35,7 +40,8 @@
     <section class="home" id="home">
         <div class="social">
             <a href="https://github.com/jeet44"><i class='bx bxl-github'></i></a>
-            <a href="https://youtube.com/playlist?list=PLiW8NjreeSTo5fMu00nQsiY_iR5f9ebx0"><i class='bx bxl-youtube' ></i></a>
+            <a class="youtubee"
+            href="https://youtube.com/playlist?list=PLiW8NjreeSTo5fMu00nQsiY_iR5f9ebx0"><i class='bx bxl-youtube' ></i></a>
             <a href="https://www.linkedin.com/in/jitesh-ojha-439908285"><i class='bx bxl-linkedin' ></i></a>
         </div>
         <div class="home-img">
@@ -57,7 +63,7 @@
                 </ul>
              
                <p><i>Let's connect and create something amazing together!</i></p> 
-            <a href="https://drive.google.com/file/d/1AoFpAKENzaMXTE3ZFen36Kpl-30N93mW/view?usp=drivesdk" class="btn down">Download CV <img class="dwm-img" height="30px"   src="Img/pdf-dwn.png"  alt=""> </a>
+            <a href="https://drive.google.com/drive/folders/1FJGDNoBifwRG_ZnLZtF-BTSauVEj4UBu" class="btn down">Download CV <img class="dwm-img" height="30px"   src="Img/pdf-dwn.png"  alt=""> </a>
         </div>
  
     </section>
@@ -91,7 +97,7 @@
                         <span>jiteshojha30@gmail.com</span>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1AoFpAKENzaMXTE3ZFen36Kpl-30N93mW/view?usp=drivesdk" class="btn BTN2">Download Cv</a>
+                <a href="https://drive.google.com/drive/folders/1FJGDNoBifwRG_ZnLZtF-BTSauVEj4UBu" class="btn BTN2">Download Cv</a>
             </div>
         </div>
     </section>
@@ -222,10 +228,10 @@
                 <a href="https://www.youtube.com/live/p2d7wT3FQds?feature=share"> <img src="Img/6.jpg" alt="thumbnail"></a>
             </div>
             <div class="yt-thumbnail">
-                <a href=""> <img src="Img/7.jpg" alt="thumbnail"></a>
+                <a href="https://www.youtube.com/live/wqX5rKe6Yzw?feature=share"> <img src="Img/7.jpg" alt="thumbnail"></a>
             </div>
             <div class="yt-thumbnail container">
-                <img class="img-yt" id="img-yt" src="Img/java.jpg" alt="thumbnail">
+                <a href="https://youtube.com/playlist?list=PLiW8NjreeSTo5fMu00nQsiY_iR5f9ebx0"><img class="img-yt" id="img-yt" src="Img/java.jpg" alt="thumbnail"></a>
                 <p class="title-t">watch Playlist </p>
                 <div class="overlay"></div>
                 <div class="button-t"><a href="#">Click here  </a></div>
