--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <a href="https://youtube.com/playlist?list=PLiW8NjreeSTo5fMu00nQsiY_iR5f9ebx0"><img class="img-yt" id="img-yt" src="Img/java.jpg" alt="thumbnail"></a>
                 <p class="title-t">watch Playlist </p>
                 <div class="overlay"></div>
-                <div class="button-t"><a href="#">Click here  </a></div>
+                <div class="button-t"><a href="https://youtube.com/playlist?list=PLiW8NjreeSTo5fMu00nQsiY_iR5f9ebx0">Click here  </a></div>
             </div>
             
         </div>
